# acoustic-doa

./: .gitignore  README.md  acoustic_footprint.py  audio_segmentation.py  azymuth_visualisation.py  cnn_training.py  dataset_preprocessing.py  frequencies_detection.py  pyproject.toml  visualisaion.py
notebooks/: doa.ipynb  drone_sample_transformations.ipynb
