[project]
name = "acoustic-doa"
version = "0.1.0"
description = "Acoustic Direction of Arrival (DOA) estimation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "plotly>=5.15.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
]
